@@ -211,6 +211,12 @@ img.icon {
    height: 20px;
 }
 
+img.icon.inline {
+   vertical-align: middle;
+   width: 16px;
+   height: 16px;
+}
+
 h1 {
     color: #fff;
     font-size: 17pt;
