@@ -432,6 +432,7 @@ multisite_icons.append({
     'paint':           paint_flapping,
 })
 
+#.
 #   .--Staleness-----------------------------------------------------------.
 #   |              ____  _        _                                        |
 #   |             / ___|| |_ __ _| | ___ _ __   ___  ___ ___               |
@@ -544,3 +545,35 @@ def paint_aggregations(what, row, tags, custom_vars):
 multisite_icons.append({
     'paint':           paint_aggregations,
 })
+
+#.
+#   .--Stars *-------------------------------------------------------------.
+#   |                   ____  _                                            |
+#   |                  / ___|| |_ __ _ _ __ ___  __/\__                    |
+#   |                  \___ \| __/ _` | '__/ __| \    /                    |
+#   |                   ___) | || (_| | |  \__ \ /_  _\                    |
+#   |                  |____/ \__\__,_|_|  |___/   \/                      |
+#   |                                                                      |
+#   '----------------------------------------------------------------------'
+
+
+def paint_stars(what, row, tags, custom_vars):
+    try:
+        stars = html.stars
+    except:
+        stars = set(config.load_user_file("favorites", []))
+        html.stars = stars
+
+    if what == "host":
+        starred = row["host_name"] in stars
+    else:
+        starred = (row["host_name"] + ";" + row["service_description"]) in stars
+    if starred:
+        return '<img class=icon title="%s" src="images/icon_starred.png">' % \
+          _("This %s is one of your favorites") % _(what)
+
+multisite_icons.append({
+    'columns': [],
+    'paint': paint_stars,
+})
+
