@@ -64,6 +64,46 @@ multisite_builtin_views.update({
               'sorters': [('site', False), ('site_host', False)],
               'title': _('All hosts'),
               'topic': _('Hosts')},
+ 'starred_hosts': {'browser_reload': 30,
+              'column_headers': 'pergroup',
+              'datasource': 'hosts',
+              'description': _('Overall state of your favorite hosts'),
+              'group_painters': [('sitealias', None)],
+              'hard_filters': ['summary_host'],
+              'hard_filtervars': [('is_summary_host', '0'), ('is_host_favorites', '1')],
+              'hidden': False,
+              'hide_filters': [],
+              'layout': 'table',
+              'mustsearch': False,
+              'name': 'allhosts',
+              'num_columns': 3,
+              'owner': '',
+              'painters': [('host_state', None),
+                           ('host', 'host'),
+                           ('host_icons', None),
+                           ('num_services_ok', 'host_ok'),
+                           ('num_services_warn', 'host_warn'),
+                           ('num_services_unknown', 'host_unknown'),
+                           ('num_services_crit', 'host_crit'),
+                           ('num_services_pending', 'host_pending')],
+              'play_sounds': False,
+              'public': True,
+              'show_filters': ['host_scheduled_downtime_depth',
+                               'host_in_notification_period',
+                               'hoststate',
+                               'siteopt',
+                               'host_acknowledged',
+                               'hostregex',
+                               'host_notifications_enabled',
+                               'hostgroups',
+                               'opthostgroup',
+                               'host_check_command',
+                               'opthost_contactgroup',
+                               'hostalias',
+                               'host_favorites'],
+              'sorters': [('site', False), ('site_host', False)],
+              'title': _('Favourite hosts'),
+              'topic': _('Hosts')},
  'allhosts_mini': {'browser_reload': 30,
                    'column_headers': 'pergroup',
                    'datasource': 'hosts',
@@ -168,6 +208,79 @@ multisite_builtin_views.update({
                              ('site_host', False),
                              ('svcdescr', False)],
                  'title': _('All services'),
+              'topic': _('Services')},
+ 'starred_services': {'browser_reload': 90,
+                 'column_headers': 'pergroup',
+                 'datasource': 'services',
+                 'description': _('All of your favorites services\r\nby hosts.'),
+                 'group_painters': [('sitealias', 'sitehosts'),
+                                    ('host_with_state', 'host')],
+                 'hard_filters': ['summary_host'],
+                 'hard_filtervars': [('is_service_in_notification_period',
+                                      '-1'),
+                                     ('optservicegroup', ''),
+                                     ('is_service_notifications_enabled',
+                                      '-1'),
+                                     ('is_host_in_notification_period',
+                                      '-1'),
+                                     ('is_in_downtime', '-1'),
+                                     ('is_service_scheduled_downtime_depth',
+                                      '-1'),
+                                     ('is_service_acknowledged', '-1'),
+                                     ('host', ''),
+                                     ('is_service_active_checks_enabled',
+                                      '-1'),
+                                     ('is_summary_host', '0'),
+                                     ('service', ''),
+                                     ('check_command', ''),
+                                     ('st0', 'on'),
+                                     ('st1', 'on'),
+                                     ('st2', 'on'),
+                                     ('st3', 'on'),
+                                     ('stp', 'on'),
+                                     ('opthostgroup', ''),
+                                     ('service_output', ''),
+                                     ('is_service_is_flapping', '-1'),
+                                     ('is_service_favorites', '1')],
+                 'hidden': False,
+                 'hide_filters': [],
+                 'layout': 'table',
+                 'mustsearch': False,
+                 'name': 'starred_services',
+                 'num_columns': 1,
+                 'owner': '',
+                 'painters': [('service_state', None),
+                              ('service_description', 'service'),
+                              ('svc_plugin_output', None),
+                              ('service_icons', None),
+                              ('svc_state_age', None),
+                              ('svc_check_age', None),
+                              ('perfometer', None)],
+                 'play_sounds': False,
+                 'public': True,
+                 'show_filters': ['service_in_notification_period',
+                                  'optservicegroup',
+                                  'service_notifications_enabled',
+                                  'host_in_notification_period',
+                                  'in_downtime',
+                                  'service_scheduled_downtime_depth',
+                                  'service_acknowledged',
+                                  'hostregex',
+                                  'service_active_checks_enabled',
+                                  'summary_host',
+                                  'serviceregex',
+                                  'check_command',
+                                  'svcstate',
+                                  'opthostgroup',
+                                  'output',
+                                  'service_is_flapping',
+                                  'siteopt',
+                                  'host_favorites',
+                                  'service_favorites'],
+                 'sorters': [('site', False),
+                             ('site_host', False),
+                             ('svcdescr', False)],
+                 'title': _('Favorite services'),
               'topic': _('Services')},
  'comments': {'column_headers': 'pergroup',
               'datasource': 'comments',
@@ -1039,6 +1152,7 @@ multisite_builtin_views.update({
                                  'host_staleness',
                                  'host_tags',
                                  'hostalias',
+                                 'host_favorites',
                                 ],
                 'sorters': [],
                 'title': _('Host search'),
@@ -1121,6 +1235,8 @@ multisite_builtin_views.update({
                                 'service_staleness',
                                 'host_tags',
                                 'hostalias',
+                                'host_favorites',
+                                'service_favorites',
                                 ],
                'sorters': [('site', False),
                            ('site_host', False),
